--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>PUT YOUR NAME HERE</title>
+		<title>Daniel Moore</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -24,16 +24,16 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>YOUR NAME HERE</h1>
-								<p>Welcome to my portfolio!</p>
+								<h1>Daniel Moore</h1>
+								<p>Welcome to the Python Parade!</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
-								<li><a href="#about">About</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<li><a href="#intro">See Me</a></li>
+								<li><a href="#work">Read Me</a></li>
+								<li><a href="#about">Meet Me</a></li>
+								<li><a href="#contact">Contact Me</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
