--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>DESCRIBE PROJECT<br><a href="images/link1.png">COVID-19 Chatbot</a></p>
-								<p>DESCRIBE PROJECT<br><a href="images/link2.png">Kaggle Suicide Rates</a></p>
-								<p>DESCRIBE PROJECT<br><a href="images/link3.png">Baseball</a></p>
+								<p>DESCRIBE PROJECT<br><img src="images/link1.png">COVID-19 Chatbot</a></p>
+								<p>DESCRIBE PROJECT<br><img src="images/link2.png">Kaggle Suicide Rates</a></p>
+								<p>DESCRIBE PROJECT<br><img src="images/link3.png">Baseball</a></p>
 							</article>
 
 						<!-- About -->
