--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<span class="image main"><img src="images/best_me.jpg" alt="" /></span>
 								<p>Newly minted data scientist ready to be spent on challenging projects.<br>Check out my <a href="#work">work</a>.</p>
 							
 							</article>
@@ -53,10 +53,10 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>DESCRIBE PROJECT<br><img src="images/link1.png">COVID-19 Chatbot</a></p>
-								<p>DESCRIBE PROJECT<br><img src="images/link2.png">Kaggle Suicide Rates</a></p>
-								<p>DESCRIBE PROJECT<br><img src="images/link3.png">Baseball</a></p>
+								<span class="image main"><img src="images/work.jpg" alt="" /></span>
+								<p>Project Links<br><a href="https://github.com/danielmoore19/COVID-Chat-Bot"><img src="images/link1.png"></a></p>
+								<p><a href="https://github.com/danielmoore19/baseball"><img src="images/link2.png"></a></p>
+								<p>a href="https://github.com/danielmoore19/Suicide-factors"><img src="images/link3.png"></a></p>
 							</article>
 
 						<!-- About -->
