--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/best_me.jpg" alt="" /></span>
+								<span class="image main"><img src="images/web_me.jpg" alt="" /></span>
 								<p>Newly minted data scientist ready to be spent on challenging projects.<br>Check out my <a href="#work">work</a>.</p>
 							
 							</article>
@@ -56,13 +56,13 @@
 								<span class="image main"><img src="images/work.jpg" alt="" /></span>
 								<p>Project Links<br><a href="https://github.com/danielmoore19/COVID-Chat-Bot"><img src="images/link1.png"></a></p>
 								<p><a href="https://github.com/danielmoore19/baseball"><img src="images/link2.png"></a></p>
-								<p>a href="https://github.com/danielmoore19/Suicide-factors"><img src="images/link3.png"></a></p>
+								<p><a href="https://github.com/danielmoore19/Suicide-factors"><img src="images/link3.png"></a></p>
 							</article>
 
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+								<span class="image main"><img src="images/glasses.jpg" alt="" /></span>
 								<p>My name is Daniel. I sometimes go by Djaniel. Never by Dan. Once upon a time by Danny, but that was before the Balrog.</p>
 								<p>I enjoy learning, dancing, old jazz, baseball, and making pop culture references. Try to catch them all.</p>
 							</article>
