--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/glasses.jpg" alt="" height="350" width="334" /></span>
+								<span class="image main"><img src="images/glasses.jpg" alt="" /></span>
 								<p>My name is Daniel. I sometimes go by Djaniel. Never by Dan. Once upon a time by Danny, but that was before the Balrog.</p>
 								<p>I enjoy learning, dancing, old jazz, baseball, and making pop culture references. Try to catch them all.</p>
 							</article>
