--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/web_me.jpg" alt="" /></span>
+								<span class="image main"><img src="images/best_me.jpg" alt="" /></span>
 								<p>Newly minted data scientist ready to be spent on challenging projects.<br>Check out my <a href="#work">work</a>.</p>
 							
 							</article>
